--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -164,6 +164,7 @@ pre {
  * Wrapper
  */
 .wrapper {
+  width: 100%;
   max-width: -webkit-calc(#{$content-width} - (#{$spacing-unit} * 2));
   max-width:         calc(#{$content-width} - (#{$spacing-unit} * 2));
   margin-right: auto;
