Posts now have an image

--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -206,6 +206,15 @@
   @include relative-font-size(1.5);
 }
 
+.post-image {
+  border-radius: 50%;
+  width: 100px;
+  height: 100px;
+  margin: 10px;
+  border-width: 3px;
+  border-style: solid;
+}
+
 
 
 /**
