Improved image size and orientation

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,5 +1,5 @@
 <div class="sidebar">
-    <img src="/images/WBL0.jpeg" />
+    <img src="/images/WBL/WBL0-378px.jpeg" />
     <p>{{ site.description }}</p>
     <h3>Contact:</h3>
     <ul class="contact-list">
