--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,24 +1,21 @@
-<div class="sidebar">
-    <img src="/images/WBL/WBL0-378px.jpeg" />
-    <p>{{ site.description }}</p>
-    <h3>Contact:</h3>
-    <ul class="contact-list">
-      {% if site.email %}
-      <li>
-          <a href="mailto:{{ site.email }}">Email</a>
+{% if page.author %} {% assign author = site.data.authors[page.author] %}{% else %}{% assign author = site.owner %} {% endif %}
+
+<div class="cover-card table-cell table-bottom">
+  {% if author.avatar %}
+  <img src="{{ site.url }}/img/{{ author.avatar }}" alt="" class="avatar">
+  {% endif %}
+  <a href="{{ site.url }}/" class="author_name">{{ author.name }}</a>
+  <span class="author_job">{{ author.job }}</span>
+  <span class="author_bio mbm">{{ author.bio }}</span>
+  <nav class="nav">
+    <ul class="nav-list">
+      {% for page in site.pages %} {% if page.title %}
+      <li class="nav-item">
+        <a href="{{ site.url }}{{ page.url }}">{{ page.title }}</a>{% unless forloop.last %}
+        <span>/</span>{% endunless %}
       </li>
-      {% endif %}
- 
-      {% if site.github_username %}
-      <li>
-          <a href="https://github.com/{{ site.github_username }}">GitHub</a>
-      </li>
-      {% endif %}
-      {% if site.twitter_username %}
-      <li>
-          <a href="https://twitter.com/{{ site.twitter_username }}">Twitter</a>
-      </li>
-      {% endif %}
+      {% endif %} {% endfor %}
     </ul>
- 
+  </nav>
+  {% include social-links.html %}
 </div>
