--- a/_sass/components/_variables.scss
+++ b/_sass/components/_variables.scss
@@ -27,7 +27,8 @@ $h6-fontsize: 1rem !default;
 
 // Colors
 $text-color:       rgba(0, 0, 0, 0.87) !default;
-$background-color: #f5f5f5;
+$light-text-color: rgba(1, 1, 1, 0.87);
+$background-color: black;
 
 $white:            #fff;
 $primary:          #8d7edc;
