--- a/_sass/pages/_layout.scss
+++ b/_sass/pages/_layout.scss
@@ -17,7 +17,7 @@
   }
 }
 .cover-card {
-  color: $text-color;
+  color: $light-text-color;
   padding: 0 50px;
   .avatar {
     border-radius: 50%;
