Change primary colour

--- a/_sass/components/_variables.scss
+++ b/_sass/components/_variables.scss
@@ -31,7 +31,7 @@ $light-text-color: rgba(255, 255, 255, 0.87);
 $background-color: black;
 
 $white:            #fff;
-$primary:          #8d7edc;
+$primary:          #328bf0;
 $secondary:        #F36170;
 $success:          #65e892;
 $danger:           #f83e4b;
