Add github link to project pages

--- a/_layouts/project-page.html
+++ b/_layouts/project-page.html
@@ -6,6 +6,9 @@ layout: default
     <header class="page-header">
         <h2>{{ page.name }}</h2>
         <h5>{{ page.type }}</h5>
+        {% if page.github %}
+            <a href = {{ page.github }}>Github</a>
+        {% endif %}
     </header>
 
     <article class="page-content">
