Add a title and description to project listing

--- a/_layouts/project_listing.html
+++ b/_layouts/project_listing.html
@@ -2,6 +2,9 @@
 layout: default
 ---
 
+<h2 class="text-4xl font-semibold mb-2">My Projects</h2>
+<p class="mb-4">Here's a collection of the things I've made or been involved in.</p>
+
 <div class="flex flex-wrap mb-4">
 {% for project in site.data.projects %}
     <div class="max-w-xs flex-none rounded overflow-hidden shadow-xl bg-black">
