Change tags to have light text

--- a/_layouts/project_listing.html
+++ b/_layouts/project_listing.html
@@ -20,7 +20,7 @@ layout: default
             </p>
             <a href="{{ project.github }}" class="text-gray-300"><i class="fa fa-fw fa-github" ></i></a>
             {% for tag in project.tags %}
-            <span class="inline-block bg-{{ tag }} rounded-full px-3 py-1 text-sm font-semibold">{{ tag }}</span>
+            <span class="inline-block bg-{{ tag }} rounded-full px-3 py-1 text-sm text-gray-200 font-semibold">{{ tag }}</span>
             {% endfor %}
         </div>
     </div>
