Add meta tags, make main page project listing, remove other pages

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,6 +6,9 @@
   <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
   <link rel="shortcut icon" type="image/png" href="{{ site.url }}/img/{{ site.favicon }}" >
   <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
+  {% for meta in site.data.meta %}
+  <meta name="{{ meta.name }}" content="{{ meta.content }}" />
+  {% endfor %}
 
   <!-- CSS files -->
   <link rel="stylesheet" href="{{ site.url }}/css/font-awesome.min.css">
