--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,12 +1,15 @@
 {% if page.author %} {% assign author = site.data.authors[page.author] %}{% else %}{% assign author = site.owner %} {% endif %}
 
-<div class="cover-card table-cell table-bottom">
+<div class="fixed object-left text-right h-screen w-64 bg-gray-800 text-gray-200">
   {% if author.avatar %}
   <img src="{{ site.url }}/img/{{ author.avatar }}" alt="" class="avatar">
   {% endif %}
-  <a href="{{ site.url }}/" class="author_name">{{ author.name }}</a>
-  <span class="author_job">{{ author.job }}</span>
-  <span class="author_bio mbm">{{ author.bio }}</span>
+  <a href="{{ site.url }}/" class="m-4 text-4xl font-semibold">{{ author.name }}</a>
+  <br />
+  <span class="m-2 text-l font-semibold italic text-orange-600">{{ author.job }}</span>
+  <br />
+  <span class="m-2">{{ author.bio }}</span>
+  <br />
   <nav class="nav">
     <ul class="nav-list">
       {% for page in site.pages %} {% if page.title %}
