Improve social links

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -9,5 +9,6 @@
   <br />
   <span class="mx-3 block">{{ author.bio }}</span>
   <br />
+  <span class="mx-4 text-2xl font-bold text-primary block">Contact</span>
   {% include social-links.html %}
 </div>
