Improve main section

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,6 +1,6 @@
 {% if page.author %} {% assign author = site.data.authors[page.author] %}{% else %}{% assign author = site.owner %} {% endif %}
 
-<div class="fixed object-left text-right h-screen w-64 bg-black text-gray-200">
+<div class="fixed object-left top-0 text-right h-screen w-64 bg-black text-gray-200">
   {% if author.avatar %}
   <img src="{{ site.url }}/img/{{ author.avatar }}" alt="image of {{ author.name }}" class="w-64 h-64" />
   {% endif %}
