--- a/_layouts/main_page.html
+++ b/_layouts/main_page.html
@@ -2,10 +2,11 @@
 layout: default
 ---
 
-<section class="mb-5">
+<section class="m-5">
 <h2 class="text-4xl font-semibold mb-2">About Me</h2>
 {{ site.long_description }}
 </section>
-<section class="mb-5">
+<hr class="mx-6 border-secondary">
+<section class="m-5">
 {% include project_listing.html %}
 </section>
