--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,4 @@
-<footer>
-  &copy; {{ site.time | date: '%Y' }} {{ site.owner.name }}. Powered by <a href="http://jekyllrb.com/">Jekyll</a>, <a href="http://github.com/renyuanz/leonids/">leonids theme</a> made with <i class="fa fa-heart heart-icon"></i>
+<footer class="m-5 text-tertiary text-center">
+    <hr class="mx-6 border-tertiary">
+    &copy; {{ site.time | date: '%Y' }} {{ site.owner.name }}. Powered by <a href="https://jekyllrb.com/" class="text-primary hover:underline">Jekyll</a> and <a href="https://tailwindcss.com/" class="text-primary hover:underline">Tailwind CSS</a>. Hosted by <a href="https://netlify.com" class="text-primary hover:underline">Netlify</a>
 </footer>
