--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
 
     <body>
         {% include sidebar.html %}
-        <div class="ml-64">
+        <div class="sticky bg-white sm:ml-64">
             {{ content }}
             {% include footer.html %}
         </div>
