--- a/_includes/social-links.html
+++ b/_includes/social-links.html
@@ -1,4 +1,4 @@
-<ul class="mx-4 text-l">
+<ul class="mx-4 mb-4 text-l">
     {% if author.email %}<li class=""><a href="mailto:{{ author.email }}" class="text-tertiary hover:text-primary" target="_blank">Email me <i class="fa fa-fw fa-envelope"></i></a></li>{% endif %}
     {% if author.twitter %}<li class=""><a href="http://twitter.com/{{ author.twitter }}" class="text-tertiary hover:text-primary" target="_blank">Twitter <i class="fa fa-fw fa-twitter"></i></a></li>{% endif %}
     {% if author.facebook %}<li class=""><a href="http://facebook.com/{{ author.facebook }}" class="text-tertiary hover:text-primary" target="_blank">Facebook <i class="fa fa-fw fa-facebook"></i></a></li>{% endif %}
