Add animations on load

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,6 +12,7 @@
 
   <!-- CSS files -->
   <link rel="stylesheet" href="/css/font-awesome.min.css">
+  <link rel="stylesheet" href="/css/animations.css">
   <link rel="stylesheet" href="/css/tailwind.css">
 
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.url }}">
