Improve colours thanks mila :))

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
-<footer class="m-5 text-tertiary text-center">
+<footer class="m-5 text-tertiary-dark hover:text-gray-950 text-center">
     <hr class="mx-6 border-tertiary">
-    &copy; {{ site.time | date: '%Y' }} {{ site.owner.name }}. Powered by <a href="https://jekyllrb.com/" class="text-primary hover:underline">Jekyll</a> and <a href="https://tailwindcss.com/" class="text-primary hover:underline">Tailwind CSS</a>. Hosted by <a href="https://netlify.com" class="text-primary hover:underline">Netlify</a>
+    &copy; {{ site.time | date: '%Y' }} {{ site.owner.name }}. Powered by <a href="https://jekyllrb.com/" class="text-primary-dark hover:underline">Jekyll</a> and <a href="https://tailwindcss.com/" class="text-primary-dark hover:underline">Tailwind CSS</a>. Hosted by <a href="https://netlify.com" class="text-primary-dark hover:underline">Netlify</a>
 </footer>
