--- a/_layouts/main_page.html
+++ b/_layouts/main_page.html
@@ -6,7 +6,7 @@ layout: default
 <h2 class="text-4xl font-semibold mb-2">About Me</h2>
 {{ site.long_description }}
 </section>
-<hr class="mx-6 growing border-secondary">
+<hr class="mx-6 growing border-primary-dark">
 <section class="m-5">
 {% include project_listing.html %}
 </section>
