--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -4,11 +4,11 @@
   {% if author.avatar %}
   <img src="{{ site.url }}/img/{{ author.avatar }}" alt="image of {{ author.name }}" class="w-full sm:w-64 sm:h-64" />
   {% endif %}
-  <a href="{{ site.url }}/" class="m-4 -mb-4 text-6xl font-semibold text-primary hover:underline block">{{ author.name }}</a>
+  <a href="{{ site.url }}/" class="m-4 -mb-4 text-6xl font-semibold text-primary-dark hover:underline block">{{ author.name }}</a>
   <span class="mx-2 text-l font-semibold italic text-secondary block">{{ author.job }}</span>
   <br />
   <span class="mx-3 block">{{ author.bio }}</span>
   <br />
-  <span class="mx-4 text-2xl font-bold text-primary block">Contact</span>
+  <span class="mx-4 text-2xl font-bold text-primary-dark block">Contact</span>
   {% include social-links.html %}
 </div>
