Add Oswald font

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,5 +15,8 @@
   <link rel="stylesheet" href="/css/animations.css">
   <link rel="stylesheet" href="/css/tailwind.css">
 
+  <!-- Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;600&display=swap" rel="stylesheet">
+
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.url }}">
 </head>
