--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
 
     {% include head.html %}
 
-    <body>
+    <body class="font-willbl">
         {% include sidebar.html %}
         <div class="sticky bg-white sm:ml-64">
             {{ content }}
